--- a/src/LoginFolder/SignIn.module.css
+++ b/src/LoginFolder/SignIn.module.css
@@ -25,10 +25,19 @@ form .input_container > input {
     color: white;
 }
 
+form .input_container > input:focus{
+    outline: none;
+}
 
 form .checkbox{
     display: flex;
     gap: 10px;
+    align-items: center;
+}
+
+form .checkbox input{
+    height: 20px;
+    width: 20px;
 }
 
 form .checkbox a{
